<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeyondPlayer</string>
    <string name="action_contact_0">刷新</string>
    <string name="action_contact">我的收藏</string>
    <string name="action_contact_2">最近播放</string>
    <string name="action_contact_3">切换账号</string>
    <string name="action_contact_4">关于我们</string>
    <string name="username">用户名:</string>
    <string name="password">密  码:</string>


    <string name="dummy_content">dummy_content</string>
    <string name="dummy_button">点击进入</string>
    <string name="title_activity_play">PlayActivity</string>

    <string name="order_play">顺序播放</string>
    <string name="random_play">随机播放</string>
    <string name="single_play">单曲循环</string>

    <string name="love_selected">已收藏</string>
    <string name="love_unselected">已取消收藏</string>

    <string name="download">下载</string>
    <string name="cancel">取消</string>

</resources>